# src/main/resources/META-INF/resources/api.yml
@@ -1,8 +1,8 @@
 openapi: 3.0.1
 info:
-  title: Schedule Payment Service
+  title: Transaction Processing Service
   version: 1.0.0
-  description: When making Payments, Users are typically presented with options to make those payments at a future date and / or make those payments at regular intervals. The role of the Scheduled Payment Service is to support these capabilities - Future Dated Payments and Recurring Payments. In addition, the Scheduled Payment Service also supports Bulk Payments (or Batch Payments). A typical use case is monthly Payroll Payments that are processed on behalf of Business / Corporate banking Customers.
+  description: Transaction Processing Service
   x-custom-info:
     authors:
       name: Dasun Anushka
@@ -48,6 +48,45 @@ paths:
             application/json:
               schema:
                 type: string
+  /configurations:
+    post:
+      operationId: addConfigurations
+      summary: Create configurations
+      tags:
+        - RC Configurations
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Configurations'
+      responses:
+        '200':
+          description: Confirm success.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConfigurationsResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Unexpected error while performing file operations.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      security:
+        - bearer: [ ]
                 
 #-----
 components:
@@ -102,3 +141,34 @@ components:
           type: string
           description: Internal error message of the platform
           example: 'Error occurred while processing your request. Please try again later'
+    Configurations:
+      type: object
+      properties:
+        id:
+          type: UUID
+        type:
+          type: string
+        walletId:
+          type: string
+        logicCode:
+          type: string
+        createdBy:
+          type: UUID
+        updatedby:
+          type: UUID
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        supplementaryData:
+          $ref: '#/components/schemas/OBSupplementaryData1'
+    OBSupplementaryData1:
+      type: object
+      description: Additional information that can not be captured in the structured fields and/or any other specific block.
+    ConfigurationsResponse:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/Configurations'
